force-app/main/default/objects/RateCardUpload__c/RateCardUpload__c.object-meta.xml
<CustomObject>
    <description>Audit record for each Salesforce Flex Credits Rate Card PDF uploaded by an admin. Stores the parsed JSON, the diff applied to FluentMetric_Cost_Settings__c, and a status (Draft / Applied / Reverted) so admins can review history and roll back.</description>
    <label>Rate Card Upload</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Rate Card Upload Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Card Uploads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>