force-app/main/default/objects/RateCardUpload__c/fields/AppliedBy__c.field-meta.xml
<CustomField>
    <fullName>AppliedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who applied this rate-card upload to the org-level cost settings.</description>
    <label>Applied By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Rate Card Uploads</relationshipLabel>
    <relationshipName>RateCardUploads</relationshipName>
    <type>Lookup</type>
</CustomField>