force-app/main/default/objects/RateCardUpload__c/fields/ChangeSummary__c.field-meta.xml
<CustomField>
    <fullName>ChangeSummary__c</fullName>
    <description>JSON-serialized list of field-level diffs applied at upload time. Each entry: {field, currentValue, newValue}. Used for revert and audit display.</description>
    <label>Change Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>