force-app/main/default/objects/RateCardUpload__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>Salesforce ContentDocument Id of the uploaded rate-card PDF. Stored so admins can re-download the source file from the audit record.</description>
    <label>Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>