force-app/main/default/objects/RateCardUpload__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>Effective date printed on the uploaded rate-card PDF, parsed by the prompt template.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>