force-app/main/default/objects/RateCardUpload__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-text notes the admin entered when applying the upload (e.g. "Q2 contract refresh", "test parse only").</description>
    <label>Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>