force-app/main/default/objects/RateCardUpload__c/fields/ParsedJson__c.field-meta.xml
<CustomField>
    <fullName>ParsedJson__c</fullName>
    <description>Strict JSON returned by the FluentMetric_Parse_Rate_Card prompt template — effective_date plus the 8 multiplier values.</description>
    <label>Parsed JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>