force-app/main/default/objects/RateCardUpload__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle state of the upload — Draft (parsed but not applied), Applied (multipliers written to settings), Reverted (rolled back).</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Reverted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>